--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
-    background: black;
+    background: rgb(238, 238, 238);
 }
 
-h1, h2, ul {
-    color: rgb(224, 224, 224);
+h1, h2, ul, p {
+    color: rgb(39, 39, 39);
     font-family: sans-serif;
 }
